// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation list Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-navigation-list ecl-navigation-list--col-2"
  >
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 1
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 2
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 3
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
  </div>
</jest>
`;

exports[`Navigation list Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-navigation-list ecl-navigation-list--col-2"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 1
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 2
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 3
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
  </div>
</jest>
`;

exports[`Navigation list Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-navigation-list ecl-navigation-list--col-2 custom-class custom-class--test"
  >
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 1
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 2
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
    <div
      class="ecl-navigation-list__item ecl-navigation-list__item--no-border"
    >
      <article
        class="ecl-card ecl-card--tile ecl-navigation-list__card"
      >
        <div
          class="ecl-card__image"
          role="img"
          style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
        />
        <div
          class="ecl-card__body"
        >
          <div
            class="ecl-content-block ecl-content-item__content-block"
          >
            <h1
              class="ecl-content-block__title"
            >
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                Title 3
              </a>
            </h1>
            <div
              class="ecl-content-block__description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
            </div>
          </div>
        </div>
      </article>
    </div>
  </div>
</jest>
`;
